sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: ')' expected but '<-' found.
while(i <- getNombreValeurs()-2 by 1 ) 
        ^AlgBubbleSort1:7: error: ';' expected but ')' found.
while(i <- getNombreValeurs()-2 by 1 ) 
                                     ^